--- a/css/main.css
+++ b/css/main.css
@@ -1822,7 +1822,7 @@ pre .javascript .function {
   width: 4px;
   height: 4px;
   border-radius: 50%;
-  background: #170bff;
+  background: #cdf485;
 }
 .links-of-blogroll {
   font-size: 13px;
